packages/webassemblyjs/test/fixtures/type-errors/set-global-mismatch/module.wast
(module
  (global (mut i32) (i32.const 17))
  (func 
  	(f32.const 0)
    (set_global 0)
  )
)
